--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
     <nav>
       <p>Setup</p>
       <ol>
-        <li>Google Chrome</li>
-        <li>Visual Studio Code</li>
-        <li>Figma</li>
-        <li>GitHub</li>
+        
+        <li> <a href="#google-chrome"> Google Chrome</a></li>
+        <li><a href="#vsc">Visual Studio Code</a></li>
+        <li><a href="#figma">Figma</a></li>
+        <li><a href="#github">GitHub</a></li>
       </ol>
       <p>Conceptos esenciales del Desarrollo Web</p>
       <ol>
@@ -31,22 +32,22 @@
 
   <h2>Setup</h2>
   <img src="./images/google-chrome.png" alt="Logo de Google Chrome" title="Logo de Google Chrome">
-  <h3>Google Chrome</h3>
+  <h3 id="google-chrome">Google Chrome</h3>
   <p>
     Chrome va a ser el navegador que utilizaremos en el curso por su extenso soporte de nuevos estándares y herramientas de desarrollo avanzadas y de amigable uso.
   </p>
   <img src="./images/visual-studio-code.png" alt="Logo de Visual Studio Code" title="Logo del editor Visual Studio Code">
-  <h3>Visual Studio Code</h3>
+  <h3 id="vsc">Visual Studio Code</h3>
   <p>
     Visual Studio Code es el editor de texto más popular y potente del mercado actualmente, su fácil uso y la capacidad de extenderlo por medio de plugins lo hace el complemento perfecto para cualquier programador sin importar el lenguaje en el que se desemvuelva.
   </p>
   <img src="./images/figma.png" alt="Logo de Figma" title="Logo de Figma">
-  <h3>Figma</h3>
+  <h3 id="figma">Figma</h3>
   <p>
     Figma es una la herramienta más popular en la actualidad para entregar diseños a los desarrolladores para su implementación por su fácil uso porque puede ser usado directamente desde el navegador.
   </p>
   <img src="./images/github.png" alt="Logo de Github" title="Logo de Github">
-  <h3>GitHub</h3>
+  <h3 id="github">GitHub</h3>
   <p>
     Así como en Facebook te encuentran tus amigos, en Github te encuentran otras programadoras y programadores de todo el mundo, en vez de subir fotos de tus viajes aquí subes tu código y puedes elegir hacerlo “open source” o guardarlo de manera privada, Github será esencial para almacenar tu futuro portafolio.
   </p>
